--- a/index.html
+++ b/index.html
@@ -1,11 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- head section started -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Legal Solutions</title>
+  <!-- font awesome kit -->
+  <script src="https://kit.fontawesome.com/2d75d29621.js" crossorigin="anonymous"></script>
+  <!-- google font EB Garamond and Poppins-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@600;700;800&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <!-- tailwind css and daisy ui cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- custom css -->
+  <style>
+    .font-garamond{
+      font-family: 'EB Garamond', serif;
+    }
+
+    .font-poppins{
+      font-family: 'Poppins', sans-serif;
+    }
+  </style>
+  <!-- custom tailwind css -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+          }
+        }
+      }
+    }
+  </script>
 </head>
+<!-- head section ended -->
+<!-- BODY SECTION -->
 <body>
-  
+  <!-- header section started -->
+  <header>
+    <!-- navbar section -->
+    <nav class="p-1 lg:p-10">
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-poppins text-[#707070]">
+              <li><a>Home</i></a></li>
+              <li><a>Services <i class="fa-solid fa-chevron-right"></i></a></li>
+              <li><a>Cases <i class="fa-solid fa-chevron-right"></i></a></li>
+              <li><a>Blogs <i class="fa-solid fa-chevron-right"></i></a></li>
+              <li><a>Contact Us <i class="fa-solid fa-chevron-right"></i></a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-xl font-medium lg:text-2xl lg:font-extrabold">
+            <img class="w-5 lg:w-7 font-garamond" src="images/business.png" alt=""> Justice
+          </a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 font-poppins text-[#707070]">
+            <li><a>Home</a></li>
+            <li><a>Services <i class="fa-solid fa-chevron-right"></i></a></li>
+            <li><a>Cases <i class="fa-solid fa-chevron-right"></i></a></li>
+            <li><a>Blogs <i class="fa-solid fa-chevron-right"></i></a></li>
+            <li><a>Contact Us <i class="fa-solid fa-chevron-right"></i></a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <a class="btn rounded-lg text-white font-medium bg-[#B68C5A]">Free Consultation</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!-- header section ended -->
+  <!-- main section started -->
+  <main>
+
+  </main>
+  <!-- main section ended -->
+  <!-- footer section started -->
+  <footer>
+
+  </footer>
+  <!-- footer section ended -->
 </body>
 </html>
